Revision history for PCRD

{{$NEXT}}
	- Fix display brightness becoming stuck on low values
	- Fix unicode handling in network communication
	- Fix rare cases of division by zero error
	- Improve xrandr feature

1.000 - 2025-06-08
	- PCRD is now meant to be run as root
	- PCRD now requires an "user agent" which executes some commands on behalf of the user
	- Project is now based on Mite
	- Allow multiple hooks
	- Add mute feature to Sound module
	- Add suspend feature to Power module
	- Add ac feature to Power module
	- Add xrandr feature to Display module
	- Add new Device module
	- Better dependencies handling
	- Improved documentation

0.003 - 2025-05-19
	- Execute hook now gets passed the return value of the function
	- PCRD server now creates a lockfile on the socket file

0.002 - 2025-05-17
	- Fix calculation of cpu usage
	- Add configurable time window of readings taken for battery life calculation
	- Protect against system clock changing to the future causing the program to go into a loop
	- Add minimal hook system, allow hooking to execution of module features
	- Brightness and volume steps are now configurable
	- Fix --logs argument to pcrctl
	- Add config action to pcrctl, explaining current config

0.001 - 2025-05-15
	- First version
