@@ -214,32 +214,6 @@ sub get_life
 	return int($min / ($used / $seconds) / 60);
 }
 
-## SUSPEND
-
-sub prepare_suspend
-{
-	my ($self, $feature) = @_;
-
-	@{$feature->vars->{files}} = glob $feature->config->{pattern};
-}
-
-sub check_suspend
-{
-	my ($self, $feature) = @_;
-
-	return ['unique', 'pattern'] unless @{$feature->vars->{files}} == 1;
-	return ['writable', 'pattern'] unless -w $feature->vars->{files}[0];
-	return undef;
-}
-
-sub set_suspend
-{
-	my ($self, $feature, $value) = @_;
-
-	PCRD::Util::spew($feature->vars->{files}[0], $feature->config->{state});
-	return 1;
-}
-
 sub _build_features
 {
 	my ($self) = @_;
@@ -292,19 +266,6 @@ sub _build_features
 		pattern => {
 			desc => 'glob file pattern',
 			value => '/sys/class/power_supply/BAT*/energy_now',
-		},
-	};
-
-	$features->{suspend}{info} = 'Suspend is done by writing to a file usually found under /sys directory';
-	$features->{suspend}{config} = {
-		%{$features->{suspend}{config} // {}},
-		pattern => {
-			desc => 'glob file pattern',
-			value => '/sys/power/state',
-		},
-		state => {
-			desc => 'state to which the machine should be put',
-			value => 'mem',
 		},
 	};
 
